# eligibility-api

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  data.json  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.devcontainer/: Dockerfile  Dockerfile.dev  compose.yml  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: mkdocs.yml  pre-commit.yml  publish.yml  pytest.yml  tests-pytest.yml
docs/: README.md  getting-started.md
docs/specification/: README.md  token-signing-encryption.md
docs/tests/: README.md
eligibility/: api.py
eligibility_api/: api.py  client.py  common.py  server.py  tokens.py
getting-started/: index.html
htmlcov/: class_index.html  d_f4990d1f2b79e2e6_client_py.html  d_f4990d1f2b79e2e6_server_py.html  d_f4990d1f2b79e2e6_tokens_py.html  function_index.html  index.html  status.json  z_f4990d1f2b79e2e6_client_py.html  z_f4990d1f2b79e2e6_server_py.html  z_f4990d1f2b79e2e6_tokens_py.html
search/: search_index.json
specification/: index.html
specification/examples/: index.html
specification/token-signing-encryption/: index.html
tests/: .pages  conftest.py  index.html  requirements.txt  run.sh  test_client.py  test_requests.py  test_responses.py  valid_objects.py
tests/coverage/: class_index.html  d_f4990d1f2b79e2e6___init___py.html  d_f4990d1f2b79e2e6_client_py.html  d_f4990d1f2b79e2e6_server_py.html  d_f4990d1f2b79e2e6_tokens_py.html  function_index.html  index.html  status.json  z_f4990d1f2b79e2e6___init___py.html  z_f4990d1f2b79e2e6_client_py.html  z_f4990d1f2b79e2e6_server_py.html  z_f4990d1f2b79e2e6_tokens_py.html
