[project]
name = "eligibility-api"
version = "2023.09.1"
description = "Data exchange to verify eligibility for transit benefits."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "jwcrypto>=1.5",
    "requests>=2.31.0",
]

[project.urls]
code = "https://github.com/cal-itp/eligibility-api"
tracker = "https://github.com/cal-itp/eligibility-api/issues"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "pre-commit"
]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
    "responses",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["eligibility_api"]

[tool.pyright]
include = ["eligibility_api", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]
