[metadata]
name = eligibility_api
version = 2023.01.1
description = Data exchange to verify eligibility for transit benefits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cal-itp/eligibility-api
project_urls =
    Bug Tracker = https://github.com/cal-itp/eligibility-api/issues
license = 'Apache 2.0'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    jwcrypto>=1.0
    requests>=2.27.1
